GET /gfe/kir/{gfe} added
